# unarchive

./: Cargo.toml  README.md
examples/: example.tar  extract-tar.rs  extract-targz.rs  extract-zip.rs
src/: gzip.rs  lib.rs  tar.rs  zip.rs
